objects/Marine_Insurance_Table__c.object
<CustomObject>
    <description>Table to support IIP calculations.</description>
    <fields>
        <fullName>MIT_Brand_Code_Description__c</fullName>
        <label>MIT Brand Code Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIT_Brand_Code__c</fullName>
        <label>MIT_Brand Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIT_Weighted_Average_Price__c</fullName>
        <label>Weighted Average Price</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Marine Insurance Table</label>
    <nameField>
        <displayFormat>MIT-{0000}</displayFormat>
        <label>Marine Insurance Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marine Insurance Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>